Приёмка кодов от поставщика: один код в один заказ, автоматический разбор расхождений
